--- a/index.html
+++ b/index.html
@@ -828,6 +828,8 @@
     </style>
 </head>
 <body>
+    <audio id="m" src="sources/audios/Young And Beautiful.mp3" preload="auto"></audio>
+
     <div class="hero" id="hero-type0">
         <p class="hh1">We get married!</p>
         <p class="hh2" style="margin: 10px 0 0 0">THÀNH LONG</p>
@@ -1134,8 +1136,7 @@
         let globalColor = 'rgba(0, 0, 0, 1)';
         let titleColor = 'rgba(0, 0, 0, 1)';
 
-        function onType0()
-        {
+        function onType0() {
             coords = [20.750467, 106.251851];
             mapNavigator.href = "https://www.google.com/maps/dir/?api=1&destination=20.750467,106.251851&travelmode=driving";
             mapAddress.textContent = "Địa chỉ: La Ngoại, Thanh Miện, Hải Phòng";
@@ -1149,8 +1150,7 @@
             globalColor = '#326422';
         }
 
-        function onType1()
-        {
+        function onType1() {
             coords = [20.678933, 105.861385];
             mapNavigator.href = "https://www.google.com/maps/dir/?api=1&destination=20.678933,105.861385&travelmode=driving";
             mapAddress.textContent = "Địa chỉ: Số nhà 26, đường làng phía Đông thôn Cung Thuế, Ứng Hòa, Hà Nội";
@@ -1164,22 +1164,18 @@
             globalColor = '#ff7093';
         }
 
-        function swap()
-        {
+        function swap() {
             document.querySelector('.families-horizontal').classList.toggle('swap-order');
         }
 
-        if (type === "0")
-        {
+        if (type === "0") {
             onType0();
         }
-        else if (type === "1")
-        {
+        else if (type === "1") {
             onType1();
             swap();
         }
-        else
-        {
+        else {
             mapNavigator.href = "#";
             mapNavigator.textContent = "Không có liên kết hợp lệ";
             mapNavigator.style.background = "#999";
@@ -1275,6 +1271,33 @@
 
             imgs.forEach(img => observer.observe(img));
         });
+    </script>
+
+    <script>
+        const audio = document.getElementById("m");
+
+        document.getElementById("m").play();
+
+        function tryPlay()
+        {
+            document.getElementById("m").play();
+
+            document.removeEventListener("click", () => tryPlay());
+            document.removeEventListener("touchstart", () => tryPlay());
+            document.removeEventListener("touchmove", () => tryPlay());
+            document.removeEventListener("mousedown", () => tryPlay());
+            document.removeEventListener("mousemove", () => tryPlay());
+            document.removeEventListener("keydown", () => tryPlay());
+            document.removeEventListener("scroll", () => tryPlay());
+        }
+
+        document.addEventListener("click", () => tryPlay());
+        document.addEventListener("touchstart", () => tryPlay());
+        document.addEventListener("touchmove", () => tryPlay());
+        document.addEventListener("mousedown", () => tryPlay());
+        document.addEventListener("mousemove", () => tryPlay());
+        document.addEventListener("keydown", () => tryPlay());
+        document.addEventListener("scroll", () => tryPlay());
     </script>
 </body>
 </html>
